fix(website): fix minor layout issues

--- a/website/assets/scss/vis.scss
+++ b/website/assets/scss/vis.scss
@@ -1,11 +1,11 @@
 html {
     height: 100%;
-    //Soverflow: hidden;
 }
 
 body {
     background: rgb(32, 33, 36);
     color: #ccc;
+    font-size: 1vw;
 }
 
 body .fa-caret-down, body .fa-caret-up {
@@ -57,6 +57,7 @@ select[disabled] {
 
 table {
     width: 100%;
+    font-size: inherit;
 }
 
 footer {
@@ -131,6 +132,7 @@ footer {
     height: 90vh; /*shares height with .main-view*/
     padding-right: 1.3rem;
     border-top: 1px solid #666;
+    overflow: hidden;
   }
 
 .filters {
@@ -201,7 +203,6 @@ footer {
 }
 
 .main-view-chars {
-    //background: #acf54e;
     overflow-y: scroll;
 }
 
@@ -228,7 +229,7 @@ footer {
 
 .header-info {
     display: flex;
-    gap: 5rem;
+    gap: 1rem;
     align-items: center;
 }
 
@@ -354,9 +355,11 @@ footer {
 }
 
 .site-footer {
-    position: fixed;
+    position: absolute;
     bottom: 0;
     left: 0;
+    width: 100%;
+    height: 20px;
     background: rgba(4, 4, 0, 0.267);
 }
 
